--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <style>
    body {
-     font-family: Arial, sans-serif;
+     font-family: Times New Roman, sans-serif;
       background-color: #fff;
       display: flex;
       justify-content: center;  
