--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <style>
 body {
-     font-family: Arial, sans-serif;
+     font-family: times new roman;
       background-color: #fff;
       display: flex;
       justify-content: center;  
