--- a/index.html
+++ b/index.html
@@ -1,74 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTD-8">
-    <title>Example Cafe Menu</title>
-</head>
-<style>
-body {
-     font-family: times new roman;
-      background-color: #fff;
-      display: flex;
-      justify-content: center;  
-      align-items: center;       
-      min-height: 100vh;      
-      margin: 0;
-    }
-    .menu {
-      border: 2px solid #ccc;    
-      padding: 20px;
-      max-width: 600px;          
-      background: #fff;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1); 
-    }
-    h1, h2 {
-      text-align: left;
-    }
-    a {
-      color: blue;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-     </style>
-</head>
-<body id="top">
-  <div class="menu">
-    <h1>Example Cafe Menu</h1>
-    <p>
-        <a href="starters">Starters</a>
-        <a href="maincourses">Main Courses</a>
-        <a href="desserts">Desserts</a>
-    </p>
-    <h2 id="starters">Starters</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>
+      <b>Example Cafe Menu</b>
+    </h1>
+    <h4>
+      <a href="starters">Starters</a>
+      |
+      <a href="main courses">Main courses</a>
+      |
+      <a href="desserts">Desserts</a>
+    </h4>
+    <h1>Starters</h1>
     <ul>
-        <li>Chestnut and Mushroom Goujons (v)</li>
-        <li>Goat Cheese Salad (v)</li>
-        <li>Honey Soy Chicken Kebabs</li>
-        <li>Seafood Salad</li>
+      <li>Chestmut and Mushroom Goujons (v)</li>
+      <li>Goat Cheese Salad (v)</li>
+      <li>Honey Soy Chicken Kebalbs</li>
+      <li>Seafood Salad</li>
     </ul>
-    <p><a href="#top">Back to top</a></p>
-     <h2 id="maincourses">Main courses</h2>
+    <h4>
+      <a href="#top">Back to top</a>
+    </h4>
+    <h1>Main courses</h1>
     <ul>
-        <li>Spinach and Ricotta Roulade (v)</li>
-        <li>Beef Tournados with Mustard and Dill Sauce</li>
-        <li>Roast Chicken Salad</li>
-        <li>Icelandic Cod with Parsley Sauce</li>
-        <li>Mushroom Wellington (v)</li>
+      <li>Spinach and Ricotta Roulade (v)</li>
+      <li>Beef Tounados with Mustard and Dill Sauce</li>
+      <li>Roast Chicken Salad</li>
+      <li>Icelandie Cod with Parsley Sauce</li>
+      <li>Mushroom Wellington (v)</li>
     </ul>
-    <p><a href="#top">Back to top</a></p>
-
-    <h2 id="desserts">Desserts</h2>
-    <ul>
+    <h4>
+      <a href="#top">Back to top</a>
+    </h4>
+    <h1>Desserts</h1>
+    <h4>
+      <ul>
         <li>Lemon Sorbet (v)</li>
         <li>Chocolate Mud Pie (v)</li>
         <li>Pecan Pie (v)</li>
         <li>Selection of Fine Cheeses from Around the World</li>
-    </ul>
-    <p><a href="#top">Back to top</a></p>
-
-    <p>Items marked with a (v) are suitable for vegetarians.</p>
-
-</body>
+      </ul>
+    </h4>
+    <h4>
+      <a href="#top">Back to top</a>
+    </h4>
+    <h5>Items marked with a (v) are suitable for vegetarians</h5>
+  </body>
 </html>
