--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
       <b>Example Cafe Menu</b>
     </h1>
     <h4>
-      <a href="starters">Starters</a>
-      |
-      <a href="main courses">Main courses</a>
-      |
+      <a href="starters">Starters</a>|
+      <a href="main courses">Main courses</a>|
       <a href="desserts">Desserts</a>
     </h4>
     <h1>Starters</h1>
