--- a/index.html
+++ b/index.html
@@ -4,16 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Example Cafe Menu</title>
+   <style> 
+    body 
+
+    h1, h2, p, ul, li, a {
+      font-family: inherit;
+      font-weight: normal;  
+    }
+
+  </style>
+</head>
+
+   </style>
   </head>
   <body>
     <h1>
       <b>Example Cafe Menu</b>
     </h1>
-    <h4>
-      <a href="starters">Starters</a>|
-      <a href="main courses">Main courses</a>|
+    <p>
+      <a href="starters">Starters</a>
+      |
+      <a href="main courses">Main courses</a>
+      |
       <a href="desserts">Desserts</a>
-    </h4>
+    </p>
     <h1>Starters</h1>
     <ul>
       <li>Chestmut and Mushroom Goujons (v)</li>
@@ -21,10 +35,10 @@
       <li>Honey Soy Chicken Kebalbs</li>
       <li>Seafood Salad</li>
     </ul>
-    <h4>
+    <h2>
       <a href="#top">Back to top</a>
-    </h4>
-    <h1>Main courses</h1>
+    </h2>
+    <h2>Main courses</h2>
     <ul>
       <li>Spinach and Ricotta Roulade (v)</li>
       <li>Beef Tounados with Mustard and Dill Sauce</li>
@@ -32,20 +46,20 @@
       <li>Icelandie Cod with Parsley Sauce</li>
       <li>Mushroom Wellington (v)</li>
     </ul>
-    <h4>
+    <p>
       <a href="#top">Back to top</a>
-    </h4>
+    </p>
     <h1>Desserts</h1>
     <h4>
-      <ul>
-        <li>Lemon Sorbet (v)</li>
-        <li>Chocolate Mud Pie (v)</li>
-        <li>Pecan Pie (v)</li>
-        <li>Selection of Fine Cheeses from Around the World</li>
-      </ul>
-    </h4>
-    <h4>
-      <a href="#top">Back to top</a>
+    <ul>
+      <li>Lemon Sorbet (v)</li>
+      <li>Chocolate Mud Pie (v)</li>
+      <li>Pecan Pie (v)</li>
+      <li>Selection of Fine Cheeses from Around the World</li>
+     </ul>
+     </h4>
+     <h4>
+       <a href="#top">Back to top</a>
     </h4>
     <h5>Items marked with a (v) are suitable for vegetarians</h5>
   </body>
